--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,15 @@ main = "src/index.ts"
 compatibility_date = "2024-08-15"
 compatibility_flags = ["nodejs_compat"]
 
+
+[[r2_buckets]]
+binding = "TURBO_CACHE_BUCKET"
+bucket_name = "turbo-cache"
+
+[[kv_namespaces]]
+binding = "TURBO_CACHE_KV"
+id = "52a860948f694a25a74c62fea87c7c21"
+
 # Automatically place your workloads in an optimal location to minimize latency.
 # If you are running back-end logic in a Worker, running it closer to your back-end infrastructure
 # rather than the end user may result in better performance.
