--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,7 @@ main = "src/index.ts"
 compatibility_date = "2024-08-15"
 compatibility_flags = ["nodejs_compat"]
 
+account_id = "d39cafc1184b2395ce448fcc267782ad"
 
 [[r2_buckets]]
 binding = "TURBO_CACHE_BUCKET"
